# TiffinsInRust

./: .env  Cargo.toml  Dockerfile  test.txt
entity/: Cargo.toml
entity/src/: users.rs
migration/src/: m20220101_000001_create_table.rs
src/: connection.rs  lib.rs  main.rs  middleware.rs  model.rs  routes.rs  service.rs
src/connection/: dbconection.rs
src/middleware/: authmiddleware.rs  db_conn_middleware.rs  logmiddlware.rs  user_auth_middleware.rs
src/model/: conection.rs  users.rs
src/routes/: auth.rs  routes_auth.rs  routes_user.rs  user.rs
src/service/: auth.rs  mail.rs  token.rs
src/service/auth/: auth.rs  auth_forgot.rs  auth_forgot_send_otp.rs  auth_jwt_genrator.rs  auth_login.rs  auth_logout.rs  auth_send_otp.rs  auth_signup.rs  auth_verify_forgot_otp.rs  auth_verify_otp.rs
src/service/socket/: booking.rs
src/service/user/: home.rs
