[package]
name = "backend"
version = "0.1.0"
edition = "2021"
[workspace]
members = [".", "entity", "migration"]

[dependencies]
actix-web = "4.9.0"
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs
env_logger = "0.11.5"
futures = "0.3.31"
log = "0.4.22"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
bcrypt = "0.16.0"
jsonwebtoken = "9.3.0"
redis = { version = "0.23.0", features = ["tls-native-tls"] }
sea-orm = {version = "1.1.1",features = ["sqlx-postgres","runtime-tokio-rustls","macros"]}
nanoid = "0.4.0"
uuid = { version = "1.11.0", features = ["v4"] }
chrono = "0.4.38"
validator = { version = "0.19", features = ["derive", "validator_derive"] }
validator_derive = "0.19.0"
lazy_static = "1.5.0"
