[package]
name = "backend"
version = "0.1.0"
edition = "2021"
[workspace]
members = [".", "entity", "migration"]

[dependencies]
actix-web = { version = "4.9.0" }
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs
env_logger = "0.11.5"
futures = "0.3.31"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1", features = ["full", "tokio-macros"] }
dotenv = "0.15.0"
bcrypt = "0.16.0"
jsonwebtoken = "9.3.0"
sea-orm = { version = "1.1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
nanoid = "0.4.0"
uuid = { version = "1.11.0", features = ["v4"] }
chrono = "0.4.38"
validator = { version = "0.19", features = ["derive", "validator_derive"] }
lazy_static = "1.5.0"
rand = "0.8.5"
lettre = "0.10"
thiserror = "2.0.3"
redis = { version = "0.27.5", features = ["tls"] }
redis-macros = "0.4.2"
actix-ratelimit = "0.3.1"
actix-limitation = "0.5.1"
actix-governor = "0.7.0"
socketioxide = "0.15.1"
axum = "0.7.9"
tower = "0.5.1"
actix-ws = "0.3.0"
futures-util = "0.3.31"
